# gradido_math

./: CMakeLists.txt  Doxyfile  conanfile.txt
src/: gradidomath.c  gradidomath.h  test.cpp
